# youtubepagegenerator

./: .downloadlater.txt  .gitignore  Pipfile  README.md  cert.pem  discordbot.py  downloadvideo.py  embed.py  generatepage.bat  generatepage.py  generatepageandopen.bat  generatepageandopen.py  generatepagesfromdownloadlater.bat  generatepagesfromdownloadlater.py  gitFilePath.txt  gitimport.py  index.html  key.pem  listofvideos.txt  main.py  pyproject.toml  requirements.txt  runserver.bat  runserver.py  style.css  template.txt  test.py  updatecomments.bat  updatecomments.py
scripts/: canvas.js  jsoncommentsreader.js
