[project]
name = "youtubepagegenerator"
version = "0.1.0"
description = "Various tools to archive YouTube videos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.14.0",
    "gitpython>=3.1.46",
    "python-dotenv>=1.2.2",
    "rangehttpserver==1.3.3",
    "yt-dlp>=2026.3.3",
    "yt-dlp-ejs>=0.5.0",
]
